// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoSuggestTextField Elastic Search only provided, results are fetched from elastic search. 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <div
        class="changed-field"
      >
        <label
          class="examplePersonNameField-field mb-2 w-100 mb-3"
        >
          <div
            class="field-label label-col mb-2"
          >
            <strong>
              <div
                class="examplePersonNameField-field-header"
              >
                Example Person Name Field
              </div>
            </strong>
          </div>
          <div
            class="field-col"
            style="cursor: auto;"
          >
            <div
              class="d-flex align-items-center gap-2"
            >
              <style>
                
        .autosuggest {
          position: relative;
          width: 100%;        
        }
        .autosuggest-container {
          position: relative;
        }
        .autosuggest .suggestions-container {
          display: none;
        }
        .autosuggest .suggestions-container-open {
          display: block;
          position: absolute;
          width: 100%;
          z-index: 20;
        }
        .autosuggest .suggestion-highlighted { 
          background-color: #ddd;
          cursor: pointer;
        }
      
              </style>
              <div
                class="autosuggest"
              >
                <div
                  aria-expanded="true"
                  aria-haspopup="listbox"
                  aria-owns="react-autowhatever-examplePersonNameField"
                  class="autosuggest-container"
                  role=""
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="react-autowhatever-examplePersonNameField"
                    autocomplete="none"
                    class="form-control"
                    placeholder="Type here to search."
                    type="text"
                    value="p"
                  />
                  <div
                    class="suggestions-container suggestions-container-open"
                    id="react-autowhatever-examplePersonNameField"
                    role=""
                  >
                    <ul
                      class="list-group"
                      role="listbox"
                    >
                      <li
                        aria-selected="false"
                        class="list-group-item"
                        data-suggestion-index="0"
                        id="react-autowhatever-examplePersonNameField--item-0"
                        role="option"
                      >
                        <div>
                          person1-elastic-search
                        </div>
                      </li>
                      <li
                        aria-selected="false"
                        class="list-group-item"
                        data-suggestion-index="1"
                        id="react-autowhatever-examplePersonNameField--item-1"
                        role="option"
                      >
                        <div>
                          person2-elastic-search
                        </div>
                      </li>
                      <li
                        aria-selected="false"
                        class="list-group-item"
                        data-suggestion-index="2"
                        id="react-autowhatever-examplePersonNameField--item-2"
                        role="option"
                      >
                        <div>
                          person3-elastic-search
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </label>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`AutoSuggestTextField Snapshot test 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <div
        class=""
      >
        <label
          class="examplePersonNameField-field mb-2 w-100 mb-3"
        >
          <div
            class="field-label label-col mb-2"
          >
            <strong>
              <div
                class="examplePersonNameField-field-header"
              >
                Example Person Name Field
              </div>
            </strong>
          </div>
          <div
            class="field-col"
            style="cursor: auto;"
          >
            <div
              class="d-flex align-items-center gap-2"
            >
              <style>
                
        .autosuggest {
          position: relative;
          width: 100%;        
        }
        .autosuggest-container {
          position: relative;
        }
        .autosuggest .suggestions-container {
          display: none;
        }
        .autosuggest .suggestions-container-open {
          display: block;
          position: absolute;
          width: 100%;
          z-index: 20;
        }
        .autosuggest .suggestion-highlighted { 
          background-color: #ddd;
          cursor: pointer;
        }
      
              </style>
              <div
                class="autosuggest"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="react-autowhatever-examplePersonNameField"
                  class="autosuggest-container"
                  role=""
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="react-autowhatever-examplePersonNameField"
                    autocomplete="none"
                    class="form-control"
                    placeholder="Type here to search."
                    type="text"
                    value=""
                  />
                  <div
                    class="suggestions-container"
                    id="react-autowhatever-examplePersonNameField"
                    role=""
                  />
                </div>
              </div>
            </div>
          </div>
        </label>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
